Fiz a tela de login

--- a/aqua.tech/index.html
+++ b/aqua.tech/index.html
@@ -1,25 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aquatech | Página Inicial</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="header">
         <div class="container">
             <h1 class="titulo">Aquatech</h1>
             <ul class="navbar">
-                <li>Ínicio</li>
+                <li class="agora">Ínicio</li>
                 <li>Simulador</li>
                 <li>|</li>
-                <li>Login</li>
+                <a href="login.html">
+                    <li>Login</li>
+                </a>
                 <li>Cadastro</li>
             </ul>
         </div>
     </div>
-    
+    <div class="banner">
+        <div class="container">
+            <p>Inovando sempre para <span>evoluir</span> no futuro</p>
+        </div>
+
+    </div>
+
+    <div class="social">
+        <div class="container">
+            <div class="card">
+                <img src="Imagens-CCO/imagens/growth_color.png" alt="">
+                <h4>Visão</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque inventore autem, earum voluptas fugiat
+                    cupiditate nobis? Fugiat.</p>
+            </div>
+
+            <div class="card">
+                <img src="Imagens-CCO/imagens/lightbulb_color.png" alt="">
+                <h4>Visão</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque inventore autem, earum voluptas fugiat
+                    cupiditate nobis? Fugiat.</p>
+            </div>
+
+            <div class="card">
+                <img src="Imagens-CCO/imagens/planet-earth_color.png" alt="">
+                <h4>Visão</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque inventore autem, earum voluptas fugiat
+                    cupiditate nobis? Fugiat.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <p>
+                Feito pelos alunos 1CCO &hearts;
+            </p>
+        </div>
+
 </body>
+
 </html>
