Chart JS e Cadastro

--- a/aqua.tech/index.html
+++ b/aqua.tech/index.html
@@ -20,7 +20,9 @@
                 <a href="login.html">
                     <li>Login</li>
                 </a>
-                <li>Cadastro</li>
+                <a href="cadastro.html">
+                    <li>Cadastro</li>
+                </a>
             </ul>
         </div>
     </div>
