--- a/aqua.tech/login.html
+++ b/aqua.tech/login.html
@@ -19,14 +19,16 @@
                 <li>Simulador</li>
                 <li>|</li>
                 <li class="agora">Login</li>
-                <li>Cadastro</li>
+                <a href="cadastro.html">
+                    <li>Cadastro</li>
+                </a>
             </ul>
         </div>
     </div>
 
     <div class="login">
         <div class="container">
-            <div class="card">
+            <div class="card1">
                 <h2>Olá de volta!</h2>
                 <div class="formulario">
                     <div class="campo">
